# DO3SE-UI

./: .bumpversion.cfg  .gitignore  .gitmodules  Baum_DOSE.f90  DO3SE.py  DO3SE_cli.py  DO3SE_cli_distributed.py  DOSE_file.f90  DOSE_module.f90  LICENCE.md  Makefile  NOTES  PROC_ORDER  README.md  STRUCTURE  TODO  TODO-LWP.txt  TODO-UI.txt  UI-redesign-notes.rst  app.py  application.py  automate-do3se.py  build-gui-win32.sh  build_f_model.py  build_resources.py  config.py  convert_do3se_project_file_to_json.py  dataset.py  defaults.nml  do3se.iss  do3se.xrc  do3se_env.f90  do3se_resistance.f90  do3se_soilwater.f90  do3se_utils.f90  dose-ui  dose.py  dumpprojectfile.py  f2py.Makefile  f2py.py  (+22 more)
F/: .gitignore  Baum_DOSE.f90  Baum_DOSE_test.f90  Constants_mod.f90  Environmental_mod.f90  Environmental_test.f90  Evapotranspiration_mod.f90  Evapotranspiration_test.f90  Functions_mod.f90  Inputs_mod.f90  Irradiance_mod.f90  Irradiance_test.f90  Makefile  O3_Effects_mod.f90  Params_Site_mod.f90  Params_Veg_mod.f90  Phenology_mod.f90  Phenology_test.f90  R_mod.f90  R_test.f90  Run.f90  SConstruct  Soil_mod.f90  Soil_test.f90  Test.f90  Variables_mod.f90  constants.f90  dose.f90  environmental.f90  evapotranspiration.f90  functions.f90  inputs.f90  irradiance.f90  o3.f90  o3_effects.f90  o3_flux.f90  objects.mk  options.f90  parameters.f90  params_site.f90  (+11 more)
Ftools/: F.bat  Ftools.bat  README.txt
defaults/: state.pickle.default
do3se/: _resources.py  application.py  automate.py  config.py  datapanel.py  dataset.py  dataset_test.py  dialogs.py  fieldgroups.py  fields.py  graphs.py  (+17 more)
(+347 files in other folders)
